# Sudoku

./: .gitignore  Cargo.toml  README.md  callgrind.out.16848  callgrind.out.17187  callgrind.out.38129  callgrind.out.72005  profile.sh  pubspec.yaml
integration_test/: simple_test.dart
lib/: account.dart  api.dart  board.dart  cell.dart  digit_selection.dart  domino_gui.dart  (+15 more)
solver/: Cargo.toml  sudoku1  sudoku16  sudoku16x16  sudoku2 Løsning  sudoku3  sudoku4  sudokuBenchmark  sudokuKnightsMove  sudokuKnightsMoveSolution  sudokuKnightsX  sudokuManySolutions  sudokuUdenSquare  sudokuXDiagonal4x4  sudokuXRule  sudokuZipper  sudokuZipper9x9  sudokuZipper9x9Solution
solver/benchmarks/: chaos16exp  chaos16med  chaos25exp  chaos25med  chaos9exp  chaos9med  dots16exp  dots16med  dots25exp  dots25med  dots4exp  dots4med  dots9exp  dots9med  knight16exp  knight16med  knight25exp  knight25med  knight4exp  knight4med  knight9exp  knight9med  standard16exp  standard16med.psf  standard25exp  standard25exp.psf  standard25med  standard4exp.psf  standard4med  standard9exp  standard9med  string16exp  string16med  string25exp  string25med  string4exp  string4med  string9exp  string9med
solver/profiles/: 28-02 Virker  RowColumnHiddenSingles 28-02
solver/src/: lib.rs  main.rs  rules.rs  sudoku.rs
solver/src/rules/: column_rule.rs  consecutive_rule.rs  diagonal_rule.rs  knight_rule.rs  mod.rs  parity_rule.rs  row_rule.rs  square_rule.rs  thermometer_rule.rs  x_rule.rs  zipper_rule.rs
solver/tests/: sudoku2  sudoku2 Løsning  sudoku3  sudoku3 Løsning  sudoku4  sudoku4 Løsning
(+42 files in other folders)
