[package]
name = "solver"
version = "0.1.0"
edition = "2021"
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "*"
integer-sqrt = "0.1.5"
rand = "*"
regex-macro = "*"
threadpool = "*"
num_cpus = "*"
lazy_static = "*"
bumpalo = {version = "*", features = ["allocator-api2"]}
allocator-api2 ="*"
smallvec = "*"

[profile.release]
debug=true
strip="none"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
